--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Savano Payment Gateway Extension For Yii2",
     "type": "yii2-extension",
     "keywords": ["Savano","online","payment","iran","persian"],
-    "license": "BSD",
+    "license": "MIT License",
     "authors": [
         {
             "name": "Amir Khoshhal",
